[tool.poetry]
name = "aiti-guru"
version = "0.1.0"
description = ""
authors = ["zwickvitaly <zwickvitaly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
aiohttp = "^3.10.9"
black = "^24.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
